--- a/about/index.html
+++ b/about/index.html
@@ -7,8 +7,8 @@
     <title>About - Mystery Class Records</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/images/faviconv2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/faviconv2.png" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
@@ -23,12 +23,12 @@
     <header class="header" data-expanded="false">
       <div class="logo">
         <a href="../">
-          <img src="../assets/images/header/header-logo.svg" alt="Logo">
+          <img src="../assets/images/header/header-logo.svg" alt="Mystery Class Records Logo">
         </a>
       </div>
       <nav class="nav">
         <a href="../store">STORE</a>
-        <!-- <a href="../roster">ROSTER</a> -->
+        <a href="../roster">ROSTER</a>
         <a href="../about">ABOUT</a>
         <!-- <div class="cart-container">
           <div id="cart-button"></div>
@@ -36,7 +36,7 @@
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
-          <img src="../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+          <img src="../assets/images/header/hamburger-icon.svg" alt="">
         </button>
       </div>
     </header>
@@ -56,8 +56,8 @@
             Our mission is to provide resources and assistance to artists in our community so that they can fulfill their unique and creative visions.
             <br><br>We provide a variety of services to the Oklahoma music community, including:
             HIFI in-house cassette duplication, graphic design, videography, marketing services, record deals, vinyl orders, and physical media distribution.
-            <br><br>We’re here to boost the amazing talent coming from Oklahoma and strengthen our music community with the services we provide.
-            We can’t wait to make some unexplainably good music with you!
+            <br><br>We're here to boost the amazing talent coming from Oklahoma and strengthen our music community with the services we provide.
+            We can't wait to make some unexplainably good music with you!
           </p>
           <p class="mcr-signature"><br>— The MCR Team</p>
           <a href="mailto:mysteryclassrecords@gmail.com">mysteryclassrecords@gmail.com</a>
@@ -72,14 +72,14 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../">
-              <img src="../assets/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../assets/images/footer/footer-logo.svg" alt="Mystery Class Records Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
           <a href="../store">STORE</a>
-          <!-- <a href="../roster">ROSTER</a> -->
+          <a href="../roster">ROSTER</a>
           <a href="../about">ABOUT</a>
         </nav>
       </div>
@@ -87,10 +87,10 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../assets/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../assets/images/footer/footer-icon.svg" alt="">
         </div>
         <div class="footer-copyright">
-          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+          <p>© COPYRIGHT 2026 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
