--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -8,8 +8,8 @@
     <title>powdr - EPK</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
@@ -24,12 +24,12 @@
   <header class="header" data-expanded="false">
     <div class="logo">
       <a href="../../">
-        <img src="../../assets/images/header/header-logo.svg" alt="Logo">
+        <img src="../../assets/images/header/header-logo.svg" alt="Mystery Class Records Logo">
       </a>
     </div>
     <nav class="nav">
       <a href="../../store">STORE</a>
-      <!-- <a href="../../roster">ROSTER</a> -->
+      <a href="../../roster">ROSTER</a>
       <a href="../../about">ABOUT</a>
       <!-- <div class="cart-container">
         <div id="cart-button"></div>
@@ -37,7 +37,7 @@
     </nav>
     <div class="hamburger-icon">
       <button aria-label="Toggle Menu">
-        <img src="../../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="../../assets/images/header/hamburger-icon.svg" alt="">
       </button>
     </div>
   </header>
@@ -57,10 +57,10 @@
 
           <div class="carousel-track">
             <div class="carousel-slide">
-              <img class="artist-image" src="../../assets/images/roster/powdr/band-pic1.webp" alt="Artist image 1">
+              <img class="artist-image" src="../../assets/images/artists/powdr/powdr-promo.webp" alt="">
             </div>
             <div class="carousel-slide">
-              <img class="artist-image" src="../../assets/images/roster/powdr/band-pic2.webp" alt="Artist image 2">
+              <img class="artist-image" src="../../assets/images/artists/powdr/powdr-band.webp" alt="">
             </div>
           </div>
 
@@ -77,10 +77,10 @@
             <p>Phone: (405) 473-3295</p>
           </div>
           <div class="artist-socials">
-            <!-- <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook"></a> -->
-            <a href="https://www.instagram.com/powdr.band/"><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram"></a>
-            <a href="https://www.youtube.com/channel/UCpk0vs8ECEMZzpmkhWxAqig"><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube"></a>
-            <!-- <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok"></a> -->
+            <!-- <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon"></a> -->
+            <a href="https://www.instagram.com/powdr.band/"><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon"></a>
+            <a href="https://www.youtube.com/channel/UCpk0vs8ECEMZzpmkhWxAqig"><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon"></a>
+            <!-- <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon"></a> -->
           </div>
         </div>
       </div>
@@ -90,9 +90,9 @@
         <p>
           Introducing Powdr (officially spelled “powdr”) — a unique and refreshing addition to the Oklahoma rock scene. Their music offers a handful of sounds such as indie-rock, krautrock, alternative, and a pinch of psych—all rolled up into one big beautiful experience. While Powdr are seemingly the “new kids on the block,” individually they are no strangers to the music scene of Oklahoma and beyond. 
           <br><br>
-          The members of Powdr have shared a musical bond for over 15 years—something that has always come naturally to them. Their chemistry and longtime friendship has served as a solid basis for the music they create together. Consisting of members Kilyn Massey (bass, vocals), Joshua Peck (guitar, vocals), Peyton Wilson (guitar, keyboard, vocals), and Brent Hodge (drums, vocals), Powdr showcases what a four-piece band can really do. From small house shows, to festival lineups supporting big indie heroes, Powdr’s individual members each bring a wealth of experience to the table. Despite what might seem like just the beginning, Powdr has been simmering for some time, foreshadowing their imminent success. 
+          The members of Powdr have shared a musical bond for over 15 years—something that has always come naturally to them. Their chemistry and longtime friendship has served as a solid basis for the music they create together. Consisting of members Kilyn Massey (bass, vocals), Joshua Peck (guitar, vocals), Peyton Wilson (guitar, keyboard, vocals), and Brent Hodge (drums, vocals), Powdr showcases what a four-piece band can really do. From small house shows, to festival lineups supporting big indie heroes, Powdr's individual members each bring a wealth of experience to the table. Despite what might seem like just the beginning, Powdr has been simmering for some time, foreshadowing their imminent success. 
           <br><br>
-          In the summer of 2025 Powdr looks forward to their debut EP “Settle Pain”, which releases everywhere July 25th. This wonderfully cohesive release opens strongly with two singles “Marie’s Cart” and “The Line” as well as corresponding videos for each. 
+          In the summer of 2025 Powdr looks forward to their debut EP “Settle Pain”, which releases everywhere July 25th. This wonderfully cohesive release opens strongly with two singles “Marie's Cart” and “The Line” as well as corresponding videos for each. 
           <br><br>
           Prior to the release of their first EP, Powdr has already proven themselves to be a live performance heavy hitter—playing with hometown heroes like Mad Honey, Lust Online, Photocopy, and many more. Their stage presence keeps the audience completely engaged with full band vocal layers, members switching instruments mid-song, and the incredibly tight unity in their playing.
           <br><br>
@@ -122,7 +122,7 @@
       <div class="related-merch-content">
         
         <div class="rainbow-container-top">
-          <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../assets/images/products/rainbow-container-top.png" alt="">
         </div>
 
         <div class="store-section">
@@ -132,13 +132,13 @@
             <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Mystery Class Hat</p>
-                    <p class="merch-block-product-name">Mystery Class Records</p>
+                    <p class="merch-block-artist-name">Mystery Class Records</p>
+                    <p class="merch-block-product-name">Mystery Class Hat</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$30</div>
@@ -151,7 +151,7 @@
         </div>
 
         <div class="rainbow-container-bottom">
-          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="">
         </div>
       </div>
     </section> -->
@@ -162,14 +162,14 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../../">
-              <img src="../../assets/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../../assets/images/footer/footer-logo.svg" alt="Mystery Class Records Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
           <a href="../../store">STORE</a>
-          <!-- <a href="../../roster">ROSTER</a> -->
+          <a href="../../roster">ROSTER</a>
           <a href="../../about">ABOUT</a>
         </nav>
       </div>
@@ -177,10 +177,10 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../../assets/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../../assets/images/footer/footer-icon.svg" alt="">
         </div>
         <div class="footer-copyright">
-          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+          <p>© COPYRIGHT 2026 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
