--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Mystery Class Records</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/images/faviconv2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/faviconv2.png" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="assets/shared-styles/header.css">
     <link rel="stylesheet" href="assets/shared-styles/cart-outline.css">
     <link rel="stylesheet" href="assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="home.css">     
+    <link rel="stylesheet" href="home.base.css">
+    <link rel="stylesheet" href="home.md.css"> 
+    <link rel="stylesheet" href="home.sm.css">  
   </head>
 
   <body>      
@@ -24,12 +26,12 @@
     <header class="header" data-expanded="false">
       <div class="logo">
         <a href="">
-          <img src="assets/images/header/header-logo.svg" alt="Logo">
+          <img src="assets/images/header/header-logo.svg" alt="Mystery Class Records Logo">
         </a>
       </div>
       <nav class="nav">
         <a href="store">STORE</a>
-        <!-- <a href="roster">ROSTER</a> -->
+        <a href="roster">ROSTER</a>
         <a href="about">ABOUT</a>
         <!-- <div class="cart-container">
           <div id="cart-button"></div>
@@ -37,7 +39,7 @@
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
-          <img src="assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+          <img src="assets/images/header/hamburger-icon.svg" alt="">
         </button>
       </div>
     </header>
@@ -77,7 +79,7 @@
         <p>
           In collaboration with Zaragoza Record House—this is the 3rd EP and cassette of the Hobbyist, Demo.nstration Series.
         <br><br>
-          Limited to only 5, get your hands on one before they’re gone!
+          Limited to only 5, get your hands on one before they're gone!
         </p>
         <button class="pre-order-button" onclick="location.href='store/mcr-012/'">
           BUY NOW
@@ -92,8 +94,8 @@
         <a href="store/cryhrd-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/cryhrd-001/cryhrd-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/cryhrd-001/cryhrd-001.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -110,8 +112,8 @@
         <a href="store/mcr-012/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-012/mcr-012.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-012/mcr-012-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-012/mcr-012.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-012/mcr-012-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -128,8 +130,8 @@
         <a href="store/mcr-011/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-011/mcr-011.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-011/mcr-011-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-011/mcr-011.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-011/mcr-011-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -146,8 +148,8 @@
         <a href="store/mcr-009/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-009/mcr-009.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-009/mcr-009-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-009/mcr-009.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-009/mcr-009-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -164,8 +166,8 @@
         <a href="store/pndl-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/pndl-001/pndl-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/pndl-001/pndl-001.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/pndl-001/pndl-001.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -182,8 +184,8 @@
         <a href="store/mcr-010/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-010/mcr-010.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-010/mcr-010-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-010/mcr-010.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-010/mcr-010-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -200,8 +202,8 @@
         <a href="store/mcr-008/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-008/mcr-008.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-008/mcr-008-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-008/mcr-008.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-008/mcr-008-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -218,8 +220,8 @@
         <a href="store/mcr-007/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-007/mcr-007.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-007/mcr-007-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -236,8 +238,8 @@
         <a href="store/mcr-006/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-006/mcr-006-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-006/mcr-006.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-006/mcr-006-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -254,8 +256,8 @@
         <a href="store/mcr-005/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-005/mcr-005.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-005/mcr-005-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -272,8 +274,8 @@
         <a href="store/mcr-004/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-004/mcr-004.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-004/mcr-004-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -290,13 +292,13 @@
         <a href="store/new-005/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/new-005/new-005.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
-                <p class="merch-block-artist-name">Mystery Class Hat</p>
-                <p class="merch-block-product-name">Mystery Class Records</p>
+                <p class="merch-block-artist-name">Mystery Class Records</p>
+                <p class="merch-block-product-name">Mystery Class Hat</p>
               </div>
               <div class="merch-block-price-container">
                 <div class="merch-block-price">$30</div>
@@ -308,8 +310,8 @@
         <a href="store/mcr-003/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-003/mcr-003.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -326,8 +328,8 @@
         <a href="store/mcr-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-001/mcr-001.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -344,8 +346,8 @@
         <a href="store/mcr-002/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/mcr-002/mcr-002.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -362,8 +364,8 @@
         <!-- <a href="store/new-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="assets/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-              <img src="assets/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+              <img src="assets/images/products/new-001/new-001.webp" alt="" class="merch-block-product-image default-image">
+              <img src="assets/images/products/new-001/new-001-hover.webp" alt="" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -386,14 +388,14 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="">
-              <img src="assets/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="assets/images/footer/footer-logo.svg" alt="Mystery Class Records Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
           <a href="store">STORE</a>
-          <!-- <a href="roster">ROSTER</a> -->
+          <a href="roster">ROSTER</a>
           <a href="about">ABOUT</a>
         </nav>
       </div>
@@ -401,10 +403,10 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="assets/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="assets/images/footer/footer-icon.svg" alt="">
         </div>
         <div class="footer-copyright">
-          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+          <p>© COPYRIGHT 2026 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
