--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -7,17 +7,17 @@
     <title>Cassette - Side Quests Vol. 1 - MYSTERY CLASS RECORDS</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page/desktop.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page/laptop.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page/mobile.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.base.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.md.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.sm.css">
   </head>
   
   <body>
@@ -25,12 +25,12 @@
   <header class="header" data-expanded="false">
     <div class="logo">
       <a href="../../">
-        <img src="../../assets/images/header/header-logo.svg" alt="Logo">
+        <img src="../../assets/images/header/header-logo.svg" alt="Mystery Class Records Logo">
       </a>
     </div>
     <nav class="nav">
       <a href="../../store">STORE</a>
-      <!-- <a href="../../roster">ROSTER</a> -->
+      <a href="../../roster">ROSTER</a>
       <a href="../../about">ABOUT</a>
       <!-- <div class="cart-container">
         <div id="cart-button"></div>
@@ -38,7 +38,7 @@
     </nav>
     <div class="hamburger-icon">
       <button aria-label="Toggle Menu">
-        <img src="../../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="../../assets/images/header/hamburger-icon.svg" alt="">
       </button>
     </div>
   </header>
@@ -400,7 +400,7 @@
             <h3>Track List</h3>
             <div class="vertical-whitespace"></div>
             <ol>
-              <li>Sorcerer’s Tome - Cryhard</li>
+              <li>Sorcerer's Tome - Cryhard</li>
               <li>benchmark - Kitchen Slug</li>
               <li>Cursed - Idiot Mile</li>
               <li>Flawed me - Always Last</li>
@@ -427,11 +427,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        The first-ever volume of Mystery Class’s very own series, Side Quests, is here.
+        The first-ever volume of Mystery Class's very own series, Side Quests, is here.
         <br><br>
-        This album is composed of nine tracks from our favorite up-and-coming artists in Oklahoma City and Tulsa. Each original track was made exclusively for this compilation; you won’t find them anywhere else!
+        This album is composed of nine tracks from our favorite up-and-coming artists in Oklahoma City and Tulsa. Each original track was made exclusively for this compilation; you won't find them anywhere else!
         <br><br>
-        With songs from Cryhard, Kitchen Slug, Idiot Mile, Always Last, Sweetest Pot, acid baptism, settling..., Toad Socks, and Hobbyist, there’s something for everyone to enjoy. Pick up your very own numbered and limited-edition copy of this first-ever MCR release. Limited to 25 copies.
+        With songs from Cryhard, Kitchen Slug, Idiot Mile, Always Last, Sweetest Pot, acid baptism, settling..., Toad Socks, and Hobbyist, there's something for everyone to enjoy. Pick up your very own numbered and limited-edition copy of this first-ever MCR release. Limited to 25 copies.
       </p>
     </section>
 
@@ -440,7 +440,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../assets/images/products/rainbow-container-top.png" alt="">
         </div>
 
         <!-- Store Section -->
@@ -451,8 +451,8 @@
             <a href="../mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -469,8 +469,8 @@
             <a href="../mcr-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-005/mcr-005.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -487,8 +487,8 @@
             <a href="../mcr-004/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-004/mcr-004.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-004/mcr-004-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -505,8 +505,8 @@
             <a href="../mcr-003/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -525,7 +525,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="">
         </div>
       </div>
     </section>
@@ -536,14 +536,14 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../../">
-              <img src="../../assets/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../../assets/images/footer/footer-logo.svg" alt="Mystery Class Records Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
           <a href="../../store">STORE</a>
-          <!-- <a href="../../roster">ROSTER</a> -->
+          <a href="../../roster">ROSTER</a>
           <a href="../../about">ABOUT</a>
         </nav>
       </div>
@@ -551,10 +551,10 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../../assets/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../../assets/images/footer/footer-icon.svg" alt="">
         </div>
         <div class="footer-copyright">
-          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+          <p>© COPYRIGHT 2026 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
@@ -574,10 +574,8 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="../../assets/scripts/CartRefresh.js" async></script>
     <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
     <script src="../../assets/scripts/ProductZoom.js"></script>
     <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
-
   </body>
 </html>
