--- a/store/mcr-002v/index.html
+++ b/store/mcr-002v/index.html
@@ -13,17 +13,17 @@
     <title>Vinyl - Of Course I Will - Cryhard</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page/desktop.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page/laptop.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page/mobile.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.base.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.md.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.sm.css">
   </head>
   
   <body>
@@ -31,12 +31,12 @@
   <header class="header" data-expanded="false">
     <div class="logo">
       <a href="../../">
-        <img src="../../assets/images/header/header-logo.svg" alt="Logo">
+        <img src="../../assets/images/header/header-logo.svg" alt="Mystery Class Records Logo">
       </a>
     </div>
     <nav class="nav">
       <a href="../../store">STORE</a>
-      <!-- <a href="../../roster">ROSTER</a> -->
+      <a href="../../roster">ROSTER</a>
       <a href="../../about">ABOUT</a>
       <!-- <div class="cart-container">
         <div id="cart-button"></div>
@@ -44,7 +44,7 @@
     </nav>
     <div class="hamburger-icon">
       <button aria-label="Toggle Menu">
-        <img src="../../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="../../assets/images/header/hamburger-icon.svg" alt="">
       </button>
     </div>
   </header>
@@ -105,11 +105,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Cryhard’s freshman album, Of Course I Will, now has its first-ever vinyl run. Featuring a beautiful sleeve, insert, and black vinyl. OCIW set them on a new path toward their now alt-rock, Midwest, and shoegaze sound. Get your first-edition copy while you can!
+        Cryhard's freshman album, Of Course I Will, now has its first-ever vinyl run. Featuring a beautiful sleeve, insert, and black vinyl. OCIW set them on a new path toward their now alt-rock, Midwest, and shoegaze sound. Get your first-edition copy while you can!
         <br><br>
       </p>
       <p>
-        Of Course I Will is the band's first full-length LP, reflecting on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, the album embraces its DIY roots with a warm, lo-fi sound.
+        Of Course I Will is the band's first full-length LP, reflecting on themes of growing up, anxiety, and love. Recorded in Bailey's spare bedroom, the album embraces its DIY roots with a warm, lo-fi sound.
       </p>
     </section>
 
@@ -118,7 +118,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../assets/images/products/rainbow-container-top.png" alt="">
         </div>
 
         <!-- Store Section -->
@@ -204,7 +204,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="">
         </div>
       </div>
     </section>
@@ -215,14 +215,14 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../../">
-              <img src="../../assets/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../../assets/images/footer/footer-logo.svg" alt="Mystery Class Records Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
           <a href="../../store">STORE</a>
-          <!-- <a href="../../roster">ROSTER</a> -->
+          <a href="../../roster">ROSTER</a>
           <a href="../../about">ABOUT</a>
         </nav>
       </div>
@@ -230,10 +230,10 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../../assets/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../../assets/images/footer/footer-icon.svg" alt="">
         </div>
         <div class="footer-copyright">
-          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+          <p>© COPYRIGHT 2026 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
