--- a/roster/index.html
+++ b/roster/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!-- Under Construction Redirect -->
-<script>
-    window.location.href = "/assets/scripts/under-construction.html";
-</script>
 
 <html lang="en">
   <head>
@@ -12,15 +8,17 @@
     <title>Roster - Mystery Class Records</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/images/faviconv2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/faviconv2.png" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
     <link rel="stylesheet" href="../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="roster.css">
+    <link rel="stylesheet" href="roster.base.css">
+    <link rel="stylesheet" href="roster.md.css">
+    <link rel="stylesheet" href="roster.sm.css">
   </head>
 
   <body>
@@ -28,12 +26,12 @@
     <header class="header" data-expanded="false">
       <div class="logo">
         <a href="../">
-          <img src="../assets/images/header/header-logo.svg" alt="Logo">
+          <img src="../assets/images/header/header-logo.svg" alt="Mystery Class Records Logo">
         </a>
       </div>
       <nav class="nav">
         <a href="../store">STORE</a>
-        <!-- <a href="../roster">ROSTER</a> -->
+        <a href="../roster">ROSTER</a>
         <a href="../about">ABOUT</a>
         <!-- <div class="cart-container">
           <div id="cart-button"></div>
@@ -41,7 +39,7 @@
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
-          <img src="../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+          <img src="../assets/images/header/hamburger-icon.svg" alt="">
         </button>
       </div>
     </header>
@@ -54,10 +52,10 @@
         <h1 class="roster-heading">ROSTER</h1>
         <div class="roster-grid">
     
-          <a href="acid-baptism/" class="artist-link">
+          <a href="../acid-baptism/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\acid-baptism\roster-pic.webp" alt="Acid Baptism Roster Image" class="artist-block-image">
+                <img src="../assets/images/artists/acid-baptism/acid-baptism-portrait.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -67,10 +65,10 @@
             </div>
           </a>
 
-          <a href="cryhard/" class="artist-link">
+          <a href="../cryhard/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\cryhard\roster-pic.webp" alt="Cryhard Roster Image" class="artist-block-image">
+                <img src="../assets/images/artists/cryhard/cryhard-band.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -80,10 +78,10 @@
             </div>
           </a>
 
-          <a href="donovan-funk/" class="artist-link">
+          <a href="../donovan-funk/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\donovan-funk\roster-pic.webp" alt="Donovan Funk Roster Image" class="artist-block-image">
+                <img src="../assets/images/artists/donovan-funk/donovan-funk-portrait-square.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -93,10 +91,36 @@
             </div>
           </a>
 
-          <a href="idiot-mile/" class="artist-link">
+          <a href="../feverest/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\idiot-mile\roster-pic.webp" alt="Idiot Mile Roster Image" class="artist-block-image">
+                <img src="../assets/images/artists/feverest/feverest-band.webp" alt="" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Feverest</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="../foam/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../assets/images/artists/foam/foam-band.webp" alt="" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Foam</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="../idiot-mile/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../assets/images/artists/idiot-mile/idiot-mile-live.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -106,10 +130,62 @@
             </div>
           </a>
 
-          <a href="sweetest-pot/" class="artist-link">
+          <a href="../pageant-dad/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\sweetest-pot\roster-pic.webp" alt="Sweetest Pot Roster Image" class="artist-block-image">
+                <img src="../assets/images/artists/pageant-dad/pageant-dad-portrait.webp" alt="" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Pageant Dad</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="../panhandle/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../assets/images/artists/panhandle/panhandle-portrait.webp" alt="" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Panhandle.</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="../powdr/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../assets/images/artists/powdr/powdr-promo.webp" alt="" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Powdr</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="../sliderhand/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../assets/images/artists/sliderhand/sliderhand-portrait.webp" alt="" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Sliderhand</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="../sweetest-pot/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../assets/images/artists/sweetest-pot/sweetest-pot-portrait.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -119,10 +195,10 @@
             </div>
           </a>
 
-          <a href="toad-socks/" class="artist-link">
+          <a href="../toad-socks/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\toad-socks\roster-pic.webp" alt="Toad Socks Roster Image" class="artist-block-image">
+                <img src="../assets/images/artists/toad-socks/toad-socks-band.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -142,14 +218,14 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../">
-              <img src="../assets/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../assets/images/footer/footer-logo.svg" alt="Mystery Class Records Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
           <a href="../store">STORE</a>
-          <!-- <a href="../roster">ROSTER</a> -->
+          <a href="../roster">ROSTER</a>
           <a href="../about">ABOUT</a>
         </nav>
       </div>
@@ -157,10 +233,10 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../assets/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../assets/images/footer/footer-icon.svg" alt="">
         </div>
         <div class="footer-copyright">
-          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+          <p>© COPYRIGHT 2026 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
