--- a/store/cryhrd-001/index.html
+++ b/store/cryhrd-001/index.html
@@ -7,17 +7,17 @@
     <title>OCIW White T-Shirt - Mystery Class Records</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page/desktop.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page/laptop.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page/mobile.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.base.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.md.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.sm.css">
   </head>
   
   <body>
@@ -25,12 +25,12 @@
   <header class="header" data-expanded="false">
     <div class="logo">
       <a href="../../">
-        <img src="../../assets/images/header/header-logo.svg" alt="Logo">
+        <img src="../../assets/images/header/header-logo.svg" alt="Mystery Class Records Logo">
       </a>
     </div>
     <nav class="nav">
       <a href="../../store">STORE</a>
-      <!-- <a href="../../roster">ROSTER</a> -->
+      <a href="../../roster">ROSTER</a>
       <a href="../../about">ABOUT</a>
       <!-- <div class="cart-container">
         <div id="cart-button"></div>
@@ -38,7 +38,7 @@
     </nav>
     <div class="hamburger-icon">
       <button aria-label="Toggle Menu">
-        <img src="../../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="../../assets/images/header/hamburger-icon.svg" alt="">
       </button>
     </div>
   </header>
@@ -49,7 +49,7 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../assets/images/products/cryhrd-001/cryhrd-001-full.webp" alt="Product Image">
+          <img src="../../assets/images/products/cryhrd-001/cryhrd-001-full.webp" alt="">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
@@ -426,7 +426,7 @@
       <p>
         This is the second edition <i>Of Course I Will</i> shirt from Cryhard.
         <br><br>
-        This is the final piece of merch related to this album. We’re putting these on sale to clean house and make room for the next era of Cryhard merch.
+        This is the final piece of merch related to this album. We're putting these on sale to clean house and make room for the next era of Cryhard merch.
         <br><br>
         Grab one of these white Comfort Colors album-related tees while supplies last!
       </p>
@@ -437,7 +437,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../assets/images/products/rainbow-container-top.png" alt="">
         </div>
 
         <!-- Store Section -->
@@ -448,13 +448,13 @@
             <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Mystery Class Hat</p>
-                    <p class="merch-block-product-name">Mystery Class Records</p>
+                    <p class="merch-block-artist-name">Mystery Class Records</p>
+                    <p class="merch-block-product-name">Mystery Class Hat</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$30</div>
@@ -466,8 +466,8 @@
             <a href="../../store/mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -484,8 +484,8 @@
             <a href="../mcr-003/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -502,8 +502,8 @@
             <a href="../mcr-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -522,7 +522,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="">
         </div>
       </div>
     </section>
@@ -533,14 +533,14 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../../">
-              <img src="../../assets/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../../assets/images/footer/footer-logo.svg" alt="Mystery Class Records Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
           <a href="../../store">STORE</a>
-          <!-- <a href="../../roster">ROSTER</a> -->
+          <a href="../../roster">ROSTER</a>
           <a href="../../about">ABOUT</a>
         </nav>
       </div>
@@ -548,10 +548,10 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../../assets/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../../assets/images/footer/footer-icon.svg" alt="">
         </div>
         <div class="footer-copyright">
-          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+          <p>© COPYRIGHT 2026 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
