--- a/store/index.html
+++ b/store/index.html
@@ -7,15 +7,17 @@
     <title>Store - Mystery Class Records</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/images/faviconv2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/faviconv2.png" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
     <link rel="stylesheet" href="../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="store.css">
+    <link rel="stylesheet" href="store.base.css">
+    <link rel="stylesheet" href="store.md.css">
+    <link rel="stylesheet" href="store.sm.css">
   </head>
 
   <body>
@@ -23,12 +25,12 @@
     <header class="header" data-expanded="false">
       <div class="logo">
         <a href="../">
-          <img src="../assets/images/header/header-logo.svg" alt="Logo">
+          <img src="../assets/images/header/header-logo.svg" alt="Mystery Class Records Logo">
         </a>
       </div>
       <nav class="nav">
         <a href="../store">STORE</a>
-        <!-- <a href="../roster">ROSTER</a> -->
+        <a href="../roster">ROSTER</a>
         <a href="../about">ABOUT</a>
         <!-- <div class="cart-container">
           <div id="cart-button"></div>
@@ -36,7 +38,7 @@
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
-          <img src="../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+          <img src="../assets/images/header/hamburger-icon.svg" alt="">
         </button>
       </div>
     </header>
@@ -52,8 +54,8 @@
           <a href="cryhrd-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -70,8 +72,8 @@
           <a href="mcr-012/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-012/mcr-012.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-012/mcr-012-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-012/mcr-012.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-012/mcr-012-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -88,8 +90,8 @@
           <a href="mcr-011/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-011/mcr-011.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-011/mcr-011-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-011/mcr-011.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-011/mcr-011-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -106,8 +108,8 @@
           <a href="mcr-009/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-009/mcr-009.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-009/mcr-009-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-009/mcr-009.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-009/mcr-009-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -124,8 +126,8 @@
           <a href="pndl-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/pndl-001/pndl-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/pndl-001/pndl-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/pndl-001/pndl-001.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/pndl-001/pndl-001.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -142,8 +144,8 @@
           <a href="mcr-010/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-010/mcr-010.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-010/mcr-010-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-010/mcr-010.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-010/mcr-010-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -160,8 +162,8 @@
           <a href="mcr-008/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-008/mcr-008.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-008/mcr-008-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-008/mcr-008.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-008/mcr-008-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -178,8 +180,8 @@
           <a href="mcr-007/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-007/mcr-007.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-007/mcr-007.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-007/mcr-007-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -196,8 +198,8 @@
           <a href="mcr-006/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-006/mcr-006-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-006/mcr-006.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-006/mcr-006-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -214,8 +216,8 @@
           <a href="mcr-005/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-005/mcr-005.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-005/mcr-005-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -232,8 +234,8 @@
           <a href="mcr-004/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-004/mcr-004.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-004/mcr-004-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -250,13 +252,13 @@
           <a href="new-005/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/new-005/new-005.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">Mystery Class Hat</p>
-                  <p class="merch-block-product-name">Mystery Class Records</p>
+                  <p class="merch-block-artist-name">Mystery Class Records</p>
+                  <p class="merch-block-product-name">Mystery Class Hat</p>
                 </div>
                 <div class="merch-block-price-container">
                   <div class="merch-block-price">$30</div>
@@ -268,8 +270,8 @@
           <a href="mcr-003/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-003/mcr-003.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -286,8 +288,8 @@
           <a href="mcr-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-001/mcr-001.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -304,8 +306,8 @@
           <a href="mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-002/mcr-002.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -329,14 +331,14 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../">
-              <img src="../assets/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../assets/images/footer/footer-logo.svg" alt="Mystery Class Records Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
           <a href="../store">STORE</a>
-          <!-- <a href="../roster">ROSTER</a> -->
+          <a href="../roster">ROSTER</a>
           <a href="../about">ABOUT</a>
         </nav>
       </div>
@@ -344,10 +346,10 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../assets/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../assets/images/footer/footer-icon.svg" alt="">
         </div>
         <div class="footer-copyright">
-          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+          <p>© COPYRIGHT 2026 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
