--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -7,17 +7,17 @@
     <title>Cassette - Of Course I Will - Cryhard</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page/desktop.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page/laptop.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/product-page/mobile.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.base.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.md.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.sm.css">
   </head>
   
   <body>
@@ -25,12 +25,12 @@
   <header class="header" data-expanded="false">
     <div class="logo">
       <a href="../../">
-        <img src="../../assets/images/header/header-logo.svg" alt="Logo">
+        <img src="../../assets/images/header/header-logo.svg" alt="Mystery Class Records Logo">
       </a>
     </div>
     <nav class="nav">
       <a href="../../store">STORE</a>
-      <!-- <a href="../../roster">ROSTER</a> -->
+      <a href="../../roster">ROSTER</a>
       <a href="../../about">ABOUT</a>
       <!-- <div class="cart-container">
         <div id="cart-button"></div>
@@ -38,7 +38,7 @@
     </nav>
     <div class="hamburger-icon">
       <button aria-label="Toggle Menu">
-        <img src="../../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="../../assets/images/header/hamburger-icon.svg" alt="">
       </button>
     </div>
   </header>
@@ -424,11 +424,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Cryhard’s freshman album, Of Course I Will, has its first-ever tape run.<br><br>Limited to just 50 copies, this release includes a Hi-Fi audio tape, a beautifully designed fold-out J-Slip, and a clear case. This album set the band on a new path toward their now alt-rock, Midwest, and shoegaze sound. Get your first-edition copy while you can!
+        Cryhard's freshman album, Of Course I Will, has its first-ever tape run.<br><br>Limited to just 50 copies, this release includes a Hi-Fi audio tape, a beautifully designed fold-out J-Slip, and a clear case. This album set the band on a new path toward their now alt-rock, Midwest, and shoegaze sound. Get your first-edition copy while you can!
         <br><br>
       </p>
       <p>
-        Of Course I Will is the band's first full-length LP, reflecting on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, the album embraces its DIY roots with a warm, lo-fi sound.
+        Of Course I Will is the band's first full-length LP, reflecting on themes of growing up, anxiety, and love. Recorded in Bailey's spare bedroom, the album embraces its DIY roots with a warm, lo-fi sound.
       </p>
     </section>
 
@@ -437,7 +437,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../assets/images/products/rainbow-container-top.png" alt="">
         </div>
 
         <!-- Store Section -->
@@ -448,8 +448,8 @@
             <a href="../cryhrd-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/cryhrd-001/cryhrd-001.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/cryhrd-001/cryhrd-001-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -466,8 +466,8 @@
             <a href="../mcr-003/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -484,8 +484,8 @@
             <a href="../mcr-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -502,13 +502,13 @@
             <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Mystery Class Hat</p>
-                    <p class="merch-block-product-name">Mystery Class Records</p>
+                    <p class="merch-block-artist-name">Mystery Class Records</p>
+                    <p class="merch-block-product-name">Mystery Class Hat</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$30</div>
@@ -523,7 +523,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="">
         </div>
       </div>
     </section>
@@ -534,14 +534,14 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../../">
-              <img src="../../assets/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../../assets/images/footer/footer-logo.svg" alt="Mystery Class Records Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
           <a href="../../store">STORE</a>
-          <!-- <a href="../../roster">ROSTER</a> -->
+          <a href="../../roster">ROSTER</a>
           <a href="../../about">ABOUT</a>
         </nav>
       </div>
@@ -549,10 +549,10 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../../assets/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../../assets/images/footer/footer-icon.svg" alt="">
         </div>
         <div class="footer-copyright">
-          <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
+          <p>© COPYRIGHT 2026 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
